# utility

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql-analysis.yml
buid/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
buid/Testing/Temporary/: CTestCostData.txt
buid/googletest/lib/pkgconfig/: gtest.pc
buid/src/: Makefile  cmake_install.cmake
buid/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
buid/test/Testing/Temporary/: CTestCostData.txt
buid/test/googletest-prefix/src/googletest-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
buid/test/googletest-prefix/src/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
buid/test/googletest-prefix/src/googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
buid/test/googletest-prefix/tmp/: googletest-cfgcmd.txt  googletest-gitclone.cmake  googletest-gitupdate.cmake
buid/test/string_editor/: CTestTestfile.cmake  GTEST_string_editor  Makefile  cmake_install.cmake
buid/test/string_editor/Testing/Temporary/: CTestCostData.txt
buid/test/utility/: CTestTestfile.cmake  GTEST_utility  Makefile  cmake_install.cmake
example/: CMakeLists.txt  example.cpp
module.cmake/: utility.cmake
modules.cmake/: googletest.cmake  myconfig.cmake  utility.cmake
src/: CMakeLists.txt  datatype_converter.cpp  datatype_converter.hpp  string_editor.cpp  string_editor.hpp  utility.cpp  utility.hpp
src/string_editor/: CMakeLists.txt  string_editor.hpp
test/: CMakeLists.txt
test/datatype_converter/: CMakeLists.txt  test_datatype_converter.cpp
test/string_editor/: CMakeLists.txt  test_string_editor.cpp
test/utility/: CMakeLists.txt  utility.cpp
